--- a/index.html
+++ b/index.html
@@ -3,222 +3,255 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite</title>
+<title>ZenSite · Webs que venden</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
+*{box-sizing:border-box;margin:0;padding:0}
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text","Segoe UI",sans-serif;
-  background:#05070c;
+  font-family:'Montserrat',system-ui,sans-serif;
+  background:#050505;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* BACKGROUND */
-body::before{
-  content:"";
+/* ===== TOPBAR ===== */
+.topbar{
   position:fixed;
-  inset:0;
-  background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
-    #05070c;
-  z-index:-2;
-}
-body::after{
-  content:"";
-  position:fixed;
-  inset:0;
-  backdrop-filter:blur(90px);
-  z-index:-1;
-}
-
-/* HEADER */
-header{
-  position:fixed;
-  top:0;
-  left:0;
+  top:0;left:0;
   width:100%;
-  z-index:1000;
   display:flex;
+  justify-content:space-between;
   align-items:center;
-  padding:16px 26px;
-  background:rgba(255,255,255,.04);
-  backdrop-filter:blur(16px);
-  border-bottom:1px solid rgba(255,255,255,.08);
+  padding:18px 22px;
+  z-index:10;
+  background:linear-gradient(to bottom,rgba(0,0,0,.65),transparent);
 }
-
-/* MENU */
-.nav{
-  display:flex;
-  gap:28px;
-}
-.nav a{
+.logo{font-weight:900;letter-spacing:2px}
+nav a{
   color:#fff;
   text-decoration:none;
-  font-weight:600;
-  opacity:.85;
-  white-space:nowrap;
-}
-
-/* LANG */
-.lang{
-  margin-left:auto;
-  display:flex;
-  gap:8px;
-  position:relative;
-  right:-12px;
-}
-.lang button{
-  padding:4px 10px;
-  font-size:10.5px;
-  letter-spacing:.06em;
-  border-radius:14px;
-  border:1px solid rgba(255,255,255,.25);
-  background:transparent;
-  color:#fff;
   font-weight:700;
-  cursor:pointer;
+  margin-left:22px;
+  opacity:.85;
 }
-.lang .active{
-  background:#00cfff;
-  color:#000;
-  border-color:#00cfff;
+nav a:hover{opacity:1}
+
+/* ===== HERO ===== */
+.hero{
+  min-height:100vh;
+  padding:160px 6% 120px;
+  display:grid;
+  grid-template-columns:1.1fr .9fr;
+  gap:60px;
+  align-items:center;
+  background:
+    radial-gradient(900px 600px at 50% 10%, rgba(0,140,255,.18), transparent 60%),
+    radial-gradient(800px 600px at 20% 90%, rgba(0,255,170,.18), transparent 60%),
+    #050505;
 }
 
-/* MAIN */
-main{
-  margin-top:130px;
-  padding:40px 20px 120px;
-  max-width:1100px;
-  margin-left:auto;
-  margin-right:auto;
-  text-align:center;
+/* ===== HERO TEXT ===== */
+.hero-text{
+  opacity:0;
+  transform:translateY(40px);
+  transition:1s ease;
 }
-
-/* TITLE – PREMIUM */
-h1{
-  font-size:clamp(48px,6vw,84px);
-  margin-bottom:22px;
-  letter-spacing:-0.045em;
+.hero-text.show{opacity:1;transform:none}
+.hero-text h1{
+  font-size:clamp(42px,6vw,74px);
   font-weight:900;
 }
-
-/* SUBTITLE – CLEAN & EXPENSIVE */
-#desc{
-  font-size:clamp(19px,2.4vw,23px);
-  line-height:1.6;
+.hero-text .dynamic{opacity:.7}
+.hero-text p{
+  margin-top:18px;
+  max-width:520px;
   opacity:.9;
-  max-width:680px;
-  margin:0 auto 56px;
-  font-weight:500;
+  font-size:18px;
 }
 
-/* PREVIEW */
-.preview{
-  margin-top:6px;
-  border-radius:30px;
-  background:rgba(255,255,255,.05);
-  padding:20px;
-  box-shadow:0 40px 120px rgba(0,0,0,.9);
-  animation:floatLaptop 6s ease-in-out infinite;
+/* ===== CTA ===== */
+.cta{margin-top:32px;display:flex;gap:18px}
+.cta a{
+  padding:14px 26px;
+  border-radius:14px;
+  font-weight:900;
+  text-decoration:none;
 }
-.preview img{
+.primary{background:#fff;color:#000}
+.secondary{border:1px solid rgba(255,255,255,.3);color:#fff}
+
+/* ===== HERO VISUAL ===== */
+.hero-visual{
+  opacity:0;
+  transform:translateY(40px);
+  transition:1.2s ease;
+}
+.hero-visual.show{opacity:1;transform:none}
+.laptop{
   width:100%;
-  border-radius:22px;
+  border-radius:20px;
+  box-shadow:0 40px 120px rgba(0,0,0,.7);
+  animation:float 6s ease-in-out infinite;
 }
-@keyframes floatLaptop{
+@keyframes float{
   0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-10px)}
+  50%{transform:translateY(-14px)}
 }
 
-/* OFFER */
-.offer{
-  position:absolute;
-  left:50%;
-  transform:translateX(-50%);
-  margin-top:26px;
-  padding:10px 18px;
-  border-radius:22px;
-  background:rgba(0,200,255,.18);
-  border:1px solid rgba(0,200,255,.35);
-  font-weight:600;
+/* ===== SECTION ===== */
+.section{padding:120px 6%}
+.section h2{
+  font-size:clamp(32px,5vw,52px);
+  font-weight:900;
+}
+.section p{
+  margin-top:16px;
+  max-width:640px;
+  opacity:.85;
+}
+
+/* ===== STATS ===== */
+.stats{
+  margin-top:60px;
+  display:flex;
+  gap:60px;
+  flex-wrap:wrap;
+}
+.stat{
+  font-size:34px;
+  font-weight:900;
+}
+.stat span{
+  display:block;
   font-size:14px;
-  backdrop-filter:blur(14px);
+  opacity:.7;
+  margin-top:6px;
 }
 
-/* FOOTER */
-footer{
-  margin-top:90px;
-  font-size:13px;
-  opacity:.55;
+/* ===== TESTIMONIOS ===== */
+.testimonials{
+  margin-top:80px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px;
+}
+.testimonial{
+  background:rgba(20,20,20,.75);
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:24px;
+  padding:30px;
+  backdrop-filter:blur(16px);
+  opacity:.9;
+}
+
+/* ===== WHATSAPP ===== */
+.whatsapp{
+  position:fixed;
+  bottom:22px;
+  left:22px;
+  width:56px;
+  height:56px;
+  border-radius:50%;
+  background:#25d366;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.5);
+}
+.whatsapp img{width:28px}
+
+/* ===== MOBILE ===== */
+@media(max-width:900px){
+  .hero{grid-template-columns:1fr;padding-top:140px}
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <nav class="nav">
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+<!-- TOPBAR -->
+<div class="topbar">
+  <div class="logo">ZenSite</div>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demo</a>
+    <a href="planes.html">Planes</a>
   </nav>
+</div>
 
-  <div class="lang">
-    <button id="esBtn" class="active">ES</button>
-    <button id="enBtn">EN</button>
-  </div>
-</header>
-
-<main>
-  <h1>ZenSite</h1>
-
-  <p id="desc"
-     data-es="¿Quieres llevar tu negocio al siguiente nivel? Llegaste al lugar correcto."
-     data-en="Want to take your business to the next level? You’re in the right place.">
-    ¿Quieres llevar tu negocio al siguiente nivel? Llegaste al lugar correcto.
-  </p>
-
-  <div class="preview">
-    <img src="background.jpg" alt="ZenSite preview">
-  </div>
-
-  <div class="offer"
-       data-es="🎁 15% OFF · Diciembre"
-       data-en="🎁 15% OFF · December">
-    🎁 15% OFF · Diciembre
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-text">
+    <h1>
+      Lleva tu negocio<br>
+      al <span class="dynamic" id="dynamic">siguiente nivel</span>
+    </h1>
+    <p>
+      Diseñamos webs modernas, rápidas y pensadas para convertir.
+      No es solo diseño, es presencia digital real.
+    </p>
+    <div class="cta">
+      <a href="planes.html" class="primary">Ver planes</a>
+      <a href="demo.html" class="secondary">Ver demos</a>
+    </div>
   </div>
 
-  <footer>
-    © 2025 ZenSite. Todos los derechos reservados.
-  </footer>
-</main>
+  <div class="hero-visual">
+    <!-- usa tu imagen laptop -->
+    <img src="laptop.png" class="laptop" alt="ZenSite demo">
+  </div>
+</section>
+
+<!-- RESULTADOS -->
+<section class="section">
+  <h2>Resultados reales</h2>
+  <p>Trabajamos con negocios que buscan verse profesionales y vender más.</p>
+
+  <div class="stats">
+    <div class="stat"><strong id="c1">0</strong><span>Proyectos entregados</span></div>
+    <div class="stat"><strong id="c2">0</strong><span>Países</span></div>
+    <div class="stat"><strong id="c3">0</strong><span>Satisfacción</span></div>
+  </div>
+
+  <div class="testimonials">
+    <div class="testimonial">“Mi web ahora sí transmite profesionalismo.” — Carlos M.</div>
+    <div class="testimonial">“Muy buen gusto visual y rapidez.” — Laura P.</div>
+    <div class="testimonial">“Lista para vender desde el primer día.” — Daniel R.</div>
+  </div>
+</section>
+
+<!-- WHATSAPP -->
+<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">
+  <img src="whatsapp.png" alt="WhatsApp">
+</a>
 
 <script>
-const esBtn=document.getElementById("esBtn");
-const enBtn=document.getElementById("enBtn");
+/* Animaciones iniciales */
+window.addEventListener("load",()=>{
+  document.querySelector(".hero-text").classList.add("show");
+  document.querySelector(".hero-visual").classList.add("show");
+});
 
-function setLang(lang){
-  document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent = el.dataset[lang];
-  });
+/* Texto dinámico */
+const words=["siguiente nivel","modo profesional","nivel premium"];
+let i=0;
+setInterval(()=>{
+  document.getElementById("dynamic").textContent=words[i++%words.length];
+},3000);
+
+/* Contadores suaves */
+function animate(id,target){
+  let c=0;
+  const el=document.getElementById(id);
+  const int=setInterval(()=>{
+    c++;
+    el.textContent=c;
+    if(c>=target) clearInterval(int);
+  },25);
 }
-
-esBtn.onclick=()=>{
-  esBtn.classList.add("active");
-  enBtn.classList.remove("active");
-  setLang("es");
-};
-
-enBtn.onclick=()=>{
-  enBtn.classList.add("active");
-  esBtn.classList.remove("active");
-  setLang("en");
-};
+animate("c1",60);
+animate("c2",5);
+animate("c3",98);
 </script>
 
 </body>
