--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite · Webs que venden</title>
+<title>ZenSite</title>
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family:'Montserrat',system-ui,sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   background:#050505;
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== TOPBAR ===== */
-.topbar{
+/* ===== HEADER ===== */
+header{
   position:fixed;
   top:0;left:0;
   width:100%;
+  padding:18px 7%;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:18px 22px;
-  z-index:10;
-  background:linear-gradient(to bottom,rgba(0,0,0,.65),transparent);
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(14px);
+  z-index:1000;
 }
-.logo{font-weight:900;letter-spacing:2px}
+.logo{
+  font-weight:900;
+  font-size:22px;
+  letter-spacing:.5px;
+}
 nav a{
   color:#fff;
   text-decoration:none;
   font-weight:700;
-  margin-left:22px;
+  margin-left:20px;
   opacity:.85;
 }
 nav a:hover{opacity:1}
@@ -39,219 +44,181 @@ nav a:hover{opacity:1}
 /* ===== HERO ===== */
 .hero{
   min-height:100vh;
-  padding:160px 6% 120px;
-  display:grid;
-  grid-template-columns:1.1fr .9fr;
-  gap:60px;
-  align-items:center;
+  padding:160px 7% 120px;
   background:
-    radial-gradient(900px 600px at 50% 10%, rgba(0,140,255,.18), transparent 60%),
-    radial-gradient(800px 600px at 20% 90%, rgba(0,255,170,.18), transparent 60%),
+    radial-gradient(900px 500px at 50% 10%, rgba(0,140,255,.22), transparent 65%),
+    radial-gradient(700px 500px at 80% 85%, rgba(0,255,170,.18), transparent 65%),
     #050505;
+  animation:fadeUp .9s ease;
+}
+.hero h1{
+  font-size:clamp(44px,8vw,82px);
+  font-weight:900;
+  line-height:1.05;
+}
+.hero p{
+  margin-top:18px;
+  max-width:620px;
+  font-size:18px;
+  opacity:.88;
 }
 
-/* ===== HERO TEXT ===== */
-.hero-text{
-  opacity:0;
-  transform:translateY(40px);
-  transition:1s ease;
+/* ===== BUTTONS ===== */
+.actions{
+  margin-top:46px;
+  display:flex;
+  gap:18px;
+  flex-wrap:wrap;
 }
-.hero-text.show{opacity:1;transform:none}
-.hero-text h1{
-  font-size:clamp(42px,6vw,74px);
+.btn{
+  padding:16px 34px;
+  border-radius:14px;
   font-weight:900;
+  font-size:16px;
+  cursor:pointer;
+  border:1px solid rgba(255,255,255,.2);
 }
-.hero-text .dynamic{opacity:.7}
-.hero-text p{
-  margin-top:18px;
-  max-width:520px;
-  opacity:.9;
+.btn.primary{
+  background:#fff;
+  color:#000;
+  border:none;
+}
+.btn.ghost{
+  background:transparent;
+  color:#fff;
+}
+
+/* ===== WHY ===== */
+.why{
+  padding:120px 7%;
+}
+.why h2{
+  font-size:42px;
+  margin-bottom:40px;
+}
+.why-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:26px;
+}
+.why-box{
+  background:rgba(20,20,20,.75);
+  border:1px solid rgba(255,255,255,.1);
+  border-radius:22px;
+  padding:28px;
+}
+.why-box strong{
+  display:block;
+  margin-bottom:10px;
   font-size:18px;
 }
 
 /* ===== CTA ===== */
-.cta{margin-top:32px;display:flex;gap:18px}
-.cta a{
-  padding:14px 26px;
-  border-radius:14px;
-  font-weight:900;
-  text-decoration:none;
+.final{
+  padding:120px 7%;
+  text-align:center;
 }
-.primary{background:#fff;color:#000}
-.secondary{border:1px solid rgba(255,255,255,.3);color:#fff}
-
-/* ===== HERO VISUAL ===== */
-.hero-visual{
-  opacity:0;
-  transform:translateY(40px);
-  transition:1.2s ease;
+.final h2{
+  font-size:42px;
+  margin-bottom:20px;
 }
-.hero-visual.show{opacity:1;transform:none}
-.laptop{
-  width:100%;
-  border-radius:20px;
-  box-shadow:0 40px 120px rgba(0,0,0,.7);
-  animation:float 6s ease-in-out infinite;
-}
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-14px)}
-}
-
-/* ===== SECTION ===== */
-.section{padding:120px 6%}
-.section h2{
-  font-size:clamp(32px,5vw,52px);
-  font-weight:900;
-}
-.section p{
-  margin-top:16px;
-  max-width:640px;
+.final p{
   opacity:.85;
-}
-
-/* ===== STATS ===== */
-.stats{
-  margin-top:60px;
-  display:flex;
-  gap:60px;
-  flex-wrap:wrap;
-}
-.stat{
-  font-size:34px;
-  font-weight:900;
-}
-.stat span{
-  display:block;
-  font-size:14px;
-  opacity:.7;
-  margin-top:6px;
-}
-
-/* ===== TESTIMONIOS ===== */
-.testimonials{
-  margin-top:80px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:30px;
-}
-.testimonial{
-  background:rgba(20,20,20,.75);
-  border:1px solid rgba(255,255,255,.12);
-  border-radius:24px;
-  padding:30px;
-  backdrop-filter:blur(16px);
-  opacity:.9;
+  margin-bottom:34px;
 }
 
 /* ===== WHATSAPP ===== */
 .whatsapp{
   position:fixed;
-  bottom:22px;
-  left:22px;
-  width:56px;
-  height:56px;
-  border-radius:50%;
+  bottom:24px;
+  right:24px;
+  width:60px;
+  height:60px;
   background:#25d366;
+  border-radius:50%;
   display:flex;
   align-items:center;
   justify-content:center;
-  box-shadow:0 10px 30px rgba(0,0,0,.5);
+  font-size:30px;
+  color:#fff;
+  text-decoration:none;
+  z-index:999;
 }
-.whatsapp img{width:28px}
+
+/* ===== ANIM ===== */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:none}
+}
 
 /* ===== MOBILE ===== */
-@media(max-width:900px){
-  .hero{grid-template-columns:1fr;padding-top:140px}
+@media(max-width:768px){
+  nav{display:none}
 }
 </style>
 </head>
 
 <body>
 
-<!-- TOPBAR -->
-<div class="topbar">
+<header>
   <div class="logo">ZenSite</div>
   <nav>
     <a href="index.html">Inicio</a>
     <a href="demo.html">Demo</a>
     <a href="planes.html">Planes</a>
   </nav>
-</div>
+</header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="hero-text">
-    <h1>
-      Lleva tu negocio<br>
-      al <span class="dynamic" id="dynamic">siguiente nivel</span>
-    </h1>
-    <p>
-      Diseñamos webs modernas, rápidas y pensadas para convertir.
-      No es solo diseño, es presencia digital real.
-    </p>
-    <div class="cta">
-      <a href="planes.html" class="primary">Ver planes</a>
-      <a href="demo.html" class="secondary">Ver demos</a>
+  <h1>
+    Lleva tu negocio<br>
+    al siguiente nivel
+  </h1>
+
+  <p>
+    Diseñamos webs modernas, rápidas y pensadas para convertir.
+    No es solo diseño, es presencia digital real.
+  </p>
+
+  <div class="actions">
+    <button class="btn primary" onclick="goPlans()">Ver planes</button>
+    <button class="btn ghost" onclick="goWhats()">Hablar por WhatsApp</button>
+  </div>
+</section>
+
+<section class="why">
+  <h2>¿Por qué ZenSite?</h2>
+  <div class="why-grid">
+    <div class="why-box">
+      <strong>Diseño que vende</strong>
+      No hacemos webs genéricas. Cada proyecto está pensado para convertir visitas en clientes.
+    </div>
+    <div class="why-box">
+      <strong>Rápidas y optimizadas</strong>
+      Carga inmediata, estructura limpia y experiencia fluida en móvil y laptop.
+    </div>
+    <div class="why-box">
+      <strong>Hechas para crecer</strong>
+      Tu web lista para escalar: más páginas, tienda, pagos, inventario o lo que necesites.
     </div>
   </div>
-
-  <div class="hero-visual">
-    <!-- usa tu imagen laptop -->
-    <img src="laptop.png" class="laptop" alt="ZenSite demo">
-  </div>
 </section>
 
-<!-- RESULTADOS -->
-<section class="section">
-  <h2>Resultados reales</h2>
-  <p>Trabajamos con negocios que buscan verse profesionales y vender más.</p>
-
-  <div class="stats">
-    <div class="stat"><strong id="c1">0</strong><span>Proyectos entregados</span></div>
-    <div class="stat"><strong id="c2">0</strong><span>Países</span></div>
-    <div class="stat"><strong id="c3">0</strong><span>Satisfacción</span></div>
-  </div>
-
-  <div class="testimonials">
-    <div class="testimonial">“Mi web ahora sí transmite profesionalismo.” — Carlos M.</div>
-    <div class="testimonial">“Muy buen gusto visual y rapidez.” — Laura P.</div>
-    <div class="testimonial">“Lista para vender desde el primer día.” — Daniel R.</div>
-  </div>
+<section class="final">
+  <h2>Tu web es tu primera impresión</h2>
+  <p>Haz que cuente desde el primer segundo.</p>
+  <button class="btn primary" onclick="goPlans()">Elegir plan</button>
 </section>
 
-<!-- WHATSAPP -->
-<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">
-  <img src="whatsapp.png" alt="WhatsApp">
-</a>
+<a class="whatsapp" href="https://wa.me/15027942412" target="_blank">🟢</a>
 
 <script>
-/* Animaciones iniciales */
-window.addEventListener("load",()=>{
-  document.querySelector(".hero-text").classList.add("show");
-  document.querySelector(".hero-visual").classList.add("show");
-});
-
-/* Texto dinámico */
-const words=["siguiente nivel","modo profesional","nivel premium"];
-let i=0;
-setInterval(()=>{
-  document.getElementById("dynamic").textContent=words[i++%words.length];
-},3000);
-
-/* Contadores suaves */
-function animate(id,target){
-  let c=0;
-  const el=document.getElementById(id);
-  const int=setInterval(()=>{
-    c++;
-    el.textContent=c;
-    if(c>=target) clearInterval(int);
-  },25);
+function goPlans(){
+  window.location.href="planes.html";
 }
-animate("c1",60);
-animate("c2",5);
-animate("c3",98);
+function goWhats(){
+  window.open("https://wa.me/15027942412?text=Hola,%20quiero%20mi%20web%20con%20ZenSite","_blank");
+}
 </script>
 
 </body>
